syntax = "proto3";

package stock;

option go_package = "github.com/Skapar/backend/pb;stock";

service StockService {
  // User
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {};
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {};
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
}

message CreateUserResponse {
  int64 user_id = 1;
}

